# commitwise

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
commitwise/: __init__.py  __main__.py  ai.py  cli.py  config.py  git.py
