[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "commitwise"
version = "0.1.0"
description = "AI-powered commit messages that actually make sense"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CommitWise", email = "commitwise@users.noreply.github.com"},
]
keywords = ["git", "commit", "ai", "openai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/FreeAutomation-Tech/commitwise"
Repository = "https://github.com/FreeAutomation-Tech/commitwise"

[project.scripts]
commitwise = "commitwise.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit"]
